--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <h1> something.</h1>
 <img src="download.jpg">
 <img src="Goku_2015_fnf_by_saodvd-d8nvxr3.png">
-<img src= "blue cotton cand head">
+<img src="blue cotton candy head.png">
+<img src="vegeta.png">
 <p>this sucks,</p>
 </body>
 </html>
